[tool.poetry]
name = "propheto"
version = "0.1.0"
description = "Propheto - MLOps Software Platform"
authors = ["Dan McDade <dan@propheto.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
