[tool.poetry]
name = "propheto"
version = "0.1.6"
description = "Propheto - MLOps Software Platform"
authors = ["Dan McDade <dan@propheto.io>"]
readme = "README.md"
homepage = "https://github.com/Propheto-io/propheto"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
boto3 = "^1.17.105"
tqdm = "^4.61.1"
troposphere = "^3.0.1"
cloudpickle = "^1.6.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
